--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
     <link rel="apple-touch-icon" href="/favicon.png" sizes="180x180">
     <link rel="mask-icon" href="/favicon.svg" color="#000000">
     <meta name="theme-color" content="#ffffff">
-    <script type="module" crossorigin src="/assets/index-0be7cf3f.js"></script>
-    <link rel="stylesheet" href="/assets/index-2e86c089.css">
-  <link rel="manifest" href="/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/registerSW.js"></script></head>
+    <script type="module" crossorigin src="/assets/index-592bdf91.js"></script>
+    <link rel="stylesheet" href="/assets/index-3c4b1db1.css">
+  </head>
   <body>
     <div id="root"></div>
     
