--- a/UI/src/index.css
+++ b/UI/src/index.css
@@ -20,7 +20,7 @@ strong::after {
   right: -0.5rem;
   height: 0.75rem;
   z-index: -1;
-  background-image: url("underline.svg");
+  background-image: url("/underline.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
